# neo

./: .clangd  LOG.md  README.md  TODO.md  meson.build
inc/codegen/: codegen.h
inc/common/: types.h
inc/frontend/: lexer.h  parser.h  util.h
inc/ir/: ir.h  ir_anal.h  ir_gen.h  ir_opt.h  irgen.h  iropt.h
programs/asm/: test.S
src/: main.cpp
src/codegen/: codegen.cpp  codegen_test.cpp
src/common/: types.h
src/frontend/: lexer.cpp  lexer.h  lexer_test.cpp  parser.cpp  parser.h  parser_test.cpp  util.h
src/ir/: ir.cpp  ir_anal.cpp  ir_gen.cpp  ir_gen_test.cpp  ir_opt.cpp  ir_test.cpp  irgen.cpp  irgen_test.cpp  iropt.cpp
